# rotfiles

./: .gitignore  Cargo.toml  LICENSE
src/: config.rs  database.rs  dropfile.rs  lib.rs  main.rs
testdata/: database.json
