[package]
name = "rotfiles"
version = "0.1.0"
authors = ["Brychlikow <brychlikow@gmail.com>"]
edition = "2018"
default-run = "rotfiles"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
handlebars = "2.0.2"
serde = "1.0.104"
serde_json = "1.0.48"
lazy_static = "1.4.0"
chrono = "0.4.10"
glob = "0.3.0"
structopt = "0.3.9"
pretty_env_logger = "0.4.0"
log = "0.4.8"
error-chain = "0.12.1"
path_abs = "0.5.0"

[dev-dependencies]
assert_cmd = "0.12.0"
predicates = "1.0.2"
tempfile = "3.1.0"
